tests/compile-fail/lexer/utf8-in-input.rs
  รถ //! ERROR(1:3): unexpected token: `รถ`, expected a symbol